--- a/InformeTecnico/Informe.Rmd
+++ b/InformeTecnico/Informe.Rmd
@@ -13,10 +13,11 @@ library(forecast)
 library(rjson)
 ```
 
-En el presente informe se cuenta como se realizó el proceso de depuración de datos, 
-creación de nuevas variables, manejo de fechas, obtención de los días festivos, 
-agrupamiento de datos entre otros. También se realiza análisis descriptivo para obtener
-información que puede ser útil en el proceso de modelación.
+En el presente informe se cuenta como se realizó el proceso de depuración de
+datos, creación de nuevas variables, manejo de fechas, obtención de los días
+festivos, agrupamiento de datos entre otros. También se realiza análisis
+descriptivo para obtener información que puede ser útil en el proceso de
+modelación.
 
 # Depuración de datos 
 
@@ -32,12 +33,13 @@ eran falsos únicos, por ejemplo, para la variable clase de accidente se tienen
 7 posibles valores los cuales son: atropello, caida de ocupante, caída de 
 ocupante, choque,  incendio, volcamiento y otro; note que el valor caida de 
 ocupante y caída de ocupante realmente significan lo mismo, sin embargo si 
-son observados como cadena de caracteres son diferentes lo cual implica que 
-los lenguajes de programación los tomen como dos cosas diferentes. La solución 
-a este problema fue cambiar todas las cadenas de caracteres "caída de ocupante" 
-por "caida de ocupante" (se selecciona la cadena sin tilde para evitar posibles 
-problemas con la codificación), esto se traduce en que finalmente dicha variable
-tendrá posteriormente 6 valores únicos como debería de ser. 
+son observados como cadena de caracteres son diferentes, pues uno tiene tilde
+y el otro no, lo cual implica que los lenguajes de programación los tomen como
+dos cosas diferentes. La solución a este problema fue cambiar todas las cadenas
+de caracteres "caída de ocupante" por "caida de ocupante" (se selecciona la 
+cadena sin tilde para evitar posibles problemas con la codificación), esto
+se traduce en que finalmente dicha variable tendrá posteriormente 6 valores
+únicos como debería de ser. 
 
 Este problema paso en varias variables de la base de datos y el proceso para 
 solucionar dicho inconveniente fue análogo al hecho con la variable clase de 
@@ -48,22 +50,22 @@ accidente.
 Esta variable tuvo el problema de que las coordenadas de longitud y latitud 
 estaban invertidas. La solución fue simplemente invertir las entradas.
 
-### Valores faltantes en variables espaciales
+### Datos faltantes en variables espaciales
 
-Los valores faltantes es un problema típico en la mayoría de las bases de datos.
+Los datos faltantes es un problema típico en la mayoría de las bases de datos.
 Para el caso particular de variables espaciales como barrio, comuna y número de
-comuna se utilizó la variable location después de ser arreglada (pues esta no 
-tuvo valores faltantes); con estas coordenadas se encontraron los valores que 
-deberían ir en los valores faltantes.
+comuna se utilizó la variable Location después de ser arreglada tal como se
+menciona en el párrafo anterior (pues esta no tuvo valores faltantes); con 
+estas coordenadas se encontraron los datos faltantes.
 
 ### Ubicaciones fuera de Medellín
 
-Teniendo en cuenta que el interés del estudio de la accidentalidad es en la 
-ciudad de Medellín, las observaciones que estén ubicadas fuera de la ciudad son
-eliminadas de la base de datos. Gracias a la variable location se encontraron 
-observaciones que no se encontraban en Medellín; en total se eliminaron 19733 
-observaciones de las cuales 19 estaban ubicadas en La estrella, 101 en Envigado 
-y 19613 en Heliconia.
+Las observaciones que estén ubicadas fuera de la ciudad son
+eliminadas de la base de datos, teniendo en cuenta que el interés de estudio 
+es en Medellín. Gracias a la variable Location se encontraron datos que no 
+estaban ubicados en la ciudad; en total se eliminaron 19733 observaciones de
+las cuales 19 estaban ubicadas en La estrella, 101 en Envigado y 19613 en
+Heliconia.
 
 ### Variable CBML
 
@@ -82,38 +84,49 @@ datos resultante:
 ```{r}
 basemodelo <- readRDS("basemodelo.Rds")
 kable(head(basemodelo), 
-             col.names = c("FECHA ACCIDENTE", "ACCIDENTES DIARIOS", "DIA ACCIDENTE",
-                           "PRECIP MES", "FESTIVO", "SEMANA", "QUINCENA"),
+             col.names = c("FECHA ACCIDENTE", "ACCIDENTES DIARIOS",
+                           "DIA ACCIDENTE", "PRECIP MES", "FESTIVO",
+                           "SEMANA", "QUINCENA"),
              align = "c")
 ```
 
 
 ### Fecha accidente y accidentes diarios
 
-Se obtiene al considerar la subcadena con los 10 primeros caracteres de la 
-cadena inicial (la cual contenía la fecha y hora del accidente) y agrupando 
-las fechas por frecuencia de ocurrencia (conteo). Posteriormente las cadenas 
-de fechas son convertidas en objetos de la clase Date. Todo esto se hace 
-gracias a las funciones `select()`, `group_by()`, `mutate()`, `summarise()` y
-`n()` de la librería `dplyr` y la función `as.Date()` que viene en los paquetes
-básicos de R.
+Las fechas de accidentes se obtienen al tomar los diez primeros caracteres de 
+los datos contenidos en la variable FECHA_ACCIDENTE, por ejemplo considere la
+cadena de caracteres 2014-08-05T12:15:00.000Z (la cual está en la base de datos
+depurada), la subcadena con los primeros 10 caracteres es 2014-08-05. Para el
+resto de observaciones se procedió de manera análoga. Posteriormente las
+observaciones resultantes son convertidas en objetos de la clase Date y 
+finalmente dichas fechas fueron contadas para obtener la frecuencia de 
+accidentes diarios. Todo esto se hace gracias a las funciones `select()`,
+`group_by()`, `mutate()`, `summarise()` y `n()` de la librería `dplyr` y la
+función `as.Date()` que viene en los paquetes básicos de R.
 
 ### Día accidente
 
 El día del accidente es obtenido gracias a la función `wday()` de la librería 
 `lubridate` ingresándole un objeto de la clase Date, en este caso fecha de 
-accidente.
+accidente (obtenida en el párrafo anterior).
 
 ### Precipitación del mes
 
-Se consultó en una fuente de internet cuales son los meses que se pueden 
-catalogar como lluviosos y secos en la ciudad de Medellín y se llegó que 
-los meses marzo, abril, mayo, septiembre, octubre, noviembre se consideran 
-como lluviosos y los demás como secos, luego se usó la función `month()` 
+<!-- [2]: https://es.weatherspark.com/y/22535/Clima-promedio-en-Medell%C3%ADn-Colombia-durante-todo-el-a%C3%B1o -->
+
+Se consultó en [2] cuales son los meses que se pueden 
+catalogar como lluviosos y secos en la ciudad de Medellín. Se encontró del 
+gráfico que los meses marzo, abril, mayo, septiembre, octubre y noviembre se
+pueden considerar 
+como "lluviosos" y los demás como "secos", luego se usó la función `month()` 
 de la librería `lubridate` y una instrucción condicional para determinar 
 los meses que se pueden etiquetar como lluviosos o secos.
 
+![](seco_lluvioso.png)
+
 ### Festivos y días especiales
+
+<!-- [3] Repo de github de Nequi -->
 
 Se buscó la manera de llevar la información de días festivos a la base de datos.
 Gracias a un repositorio de GitHub de Nequi se encontró un modulo node.js el 
